src/test/ui/parser/keyword-move-as-identifier.stderr
error: expected identifier, found keyword `move`
  --> $DIR/keyword-move-as-identifier.rs:4:9
   |
LL |     let move = "foo";
   |         ^^^^ expected identifier, found keyword
help: you can escape reserved keywords to use them as identifiers
   |
LL |     let r#move = "foo";
   |         ^^^^^^

error: aborting due to previous error

